--- a/matchup-web/src/app/nav/nav.component.html
+++ b/matchup-web/src/app/nav/nav.component.html
@@ -1,38 +1,37 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Matches</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Lists</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Messages</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#" (click)="logout()">Logout</a>
-      </li>
-    </ul>
-
-    <div class="dropdown" *ngIf="loggedIn()">
-      <a class="dropdown-toggle text-light">
-        Welcome User
-      </a>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <div class="container">
+      <a class="navbar-brand" href="#">Match UP</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+        <ul  *ngIf="loggedIn()" class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Matches</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Lists</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Messages</a>
+          </li>
+        </ul>
     
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#"><i class="fa fa-user"></i>  Edit Profile</a>
-        <div class="dropdown-devider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i> Logout</a>
-      </div>
-    </div>
-
-    <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()" >
-      <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" [(ngModel)]="model.username" required>
-      <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" [(ngModel)]="model.password" required>
-      <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
-    </form>
+        <div class="dropdown" *ngIf="loggedIn()" dropdown>
+          <a class="dropdown-toggle text-light" dropdownToggle>
+            Welcome {{ authService.decodedToken?.unique_name | titlecase}}
+          </a>
+        
+          <div class="dropdown-menu mt-3" *dropdownMenu>
+            <a class="dropdown-item" href="#"><i class="fa fa-user"></i>  Edit Profile</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" (click)="logout()"><i class="fa fa-sign-out"></i> Logout</a>
+          </div>
+        </div>
+    
+        <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()" >
+          <input class="form-control mr-sm-2" type="text" name="username" placeholder="Username" [(ngModel)]="model.username" required>
+          <input class="form-control mr-sm-2" type="password" name="password" placeholder="Password" [(ngModel)]="model.password" required>
+          <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+        </form>
+  </div>
 </nav>
